fotos verwerkt naar png o; transparant te kunnen maken, behalve die dat op Cato wachten

--- a/index.html
+++ b/index.html
@@ -10,9 +10,91 @@
     </head>
     <body>
         <div id="map">
-            <div id="K1A">
-                <img src="images/kleuter/K1A.jpg" alt="K1A">
+            <!-- kleuters -->
+            <div id="K1A" class="klass_icoon">
+                <img src="images/kleuter/K1A.jpg" alt="X">
                 <p>K1A</p>
+            </div>
+            <div id="K1B" class="klass_icoon">
+                <img src="images/kleuter/K1B.png" alt="X">
+                <p>K1B</p>
+            </div>
+            <div id="K2A" class="klass_icoon">
+                <img src="images/kleuter/K2A.jpg" alt="X">
+                <p>K2A</p>
+            </div>
+            <div id="K2B" class="klass_icoon">
+                <img src="images/kleuter/K2B.jpg" alt="X">
+                <p>K2B</p>
+            </div>
+            <div id="K3A" class="klass_icoon">
+                <img src="images/kleuter/K3A.jpg" alt="X">
+                <p>K3A</p>
+            </div>
+            <div id="K3B" class="klass_icoon">
+                <img src="images/kleuter/K3B.JPG" alt="X">
+                <p>K3B</p>
+            </div>
+            <div id="SPA" class="klass_icoon">
+                <img src="images/kleuter/SPA.jpg" alt="X">
+                <p>SPA</p>
+            </div>
+            <div id="SPB" class="klass_icoon">
+                <img src="images/kleuter/SPB.png" alt="X">
+                <p>SPB</p>
+            </div>
+            <!-- lager -->
+            <div id="21 dir" class="klass_icoon">
+                <img src="images/lager/21 dir.jpg" alt="X">
+                <p>21 dir</p>
+            </div>
+            <div id="L1A" class="klass_icoon">
+                <img src="images/lager/L1A.jpg" alt="X">
+                <p>L1A</p>
+            </div>
+            <div id="L1B" class="klass_icoon">
+                <img src="images/lager/L1B.png" alt="X">
+                <p>L1B</p>
+            </div>
+            <div id="L2A" class="klass_icoon">
+                <img src="images/lager/L2A.png" alt="X">
+                <p>L2A</p>
+            </div>
+            <div id="L2B" class="klass_icoon">
+                <img src="images/lager/L2B.jpg" alt="X">
+                <p>L2B</p>
+            </div>
+            <div id="L3A" class="klass_icoon">
+                <img src="images/lager/L3A.png" alt="X">
+                <p>L3A</p>
+            </div>
+            <div id="L3B" class="klass_icoon">
+                <img src="images/lager/L3B.png" alt="X">
+                <p>L3B</p>
+            </div>
+            <div id="L4A" class="klass_icoon">
+                <img src="images/lager/L4A.png" alt="X">
+                <p>L4A</p>
+            </div>
+            <div id="L4B" class="klass_icoon">
+                <img src="images/lager/L4B .jpg" alt="X">
+                <p>L4B</p>
+            </div>
+            <div id="L5A" class="klass_icoon">
+                <img src="images/lager/L5A.png" alt="X">
+                <p>L5A</p>
+            </div>
+            <div id="L5B" class="klass_icoon">
+                <img src="images/lager/L5B.jpg" alt="X">
+                <p>L5B</p>
+            </div>
+            <div id="L6" class="klass_icoon">
+                <img src="images/lager/L6.jpg" alt="X">
+                <p>L6</p>
+            </div>
+            <div id="LO" class="klass_icoon">
+                <img src="images/lager/LO.jpg" alt="X">
+                <p>LO</p>
             </div>
             
         </div>
