icoontjes op foto geplaatst en scaling afgestemd

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="map">
             <!-- kleuters -->
             <div id="K1A" class="klass_icoon">
-                <img src="images/kleuter/K1A.jpg" alt="X">
+                <img src="images/kleuter/K1A.png" alt="X">
                 <p>K1A</p>
             </div>
             <div id="K1B" class="klass_icoon">
@@ -24,11 +24,11 @@
                 <p>K2A</p>
             </div>
             <div id="K2B" class="klass_icoon">
-                <img src="images/kleuter/K2B.jpg" alt="X">
+                <img src="images/kleuter/K2B.png" alt="X">
                 <p>K2B</p>
             </div>
             <div id="K3A" class="klass_icoon">
-                <img src="images/kleuter/K3A.jpg" alt="X">
+                <img src="images/kleuter/K3A.png" alt="X">
                 <p>K3A</p>
             </div>
             <div id="K3B" class="klass_icoon">
@@ -44,12 +44,12 @@
                 <p>SPB</p>
             </div>
             <!-- lager -->
-            <div id="21 dir" class="klass_icoon">
+            <div id="dir21" class="klass_icoon">
                 <img src="images/lager/21 dir.jpg" alt="X">
                 <p>21 dir</p>
             </div>
             <div id="L1A" class="klass_icoon">
-                <img src="images/lager/L1A.jpg" alt="X">
+                <img src="images/lager/L1A.png" alt="X">
                 <p>L1A</p>
             </div>
             <div id="L1B" class="klass_icoon">
@@ -61,7 +61,7 @@
                 <p>L2A</p>
             </div>
             <div id="L2B" class="klass_icoon">
-                <img src="images/lager/L2B.jpg" alt="X">
+                <img src="images/lager/L2B.png" alt="X">
                 <p>L2B</p>
             </div>
             <div id="L3A" class="klass_icoon">
@@ -85,15 +85,15 @@
                 <p>L5A</p>
             </div>
             <div id="L5B" class="klass_icoon">
-                <img src="images/lager/L5B.jpg" alt="X">
+                <img src="images/lager/L5B.png" alt="X">
                 <p>L5B</p>
             </div>
             <div id="L6" class="klass_icoon">
-                <img src="images/lager/L6.jpg" alt="X">
+                <img src="images/lager/L6.png" alt="X">
                 <p>L6</p>
             </div>
             <div id="LO" class="klass_icoon">
-                <img src="images/lager/LO.jpg" alt="X">
+                <img src="images/lager/LO.png" alt="X">
                 <p>LO</p>
             </div>
             
