--- a/index.html
+++ b/index.html
@@ -11,90 +11,90 @@
     <body>
         <div id="map">
             <!-- kleuters -->
-            <div id="K1A" class="klass_icoon">
+            <div id="K1A" class="klas_icoon">
                 <img src="images/kleuter/K1A.png" alt="X">
-                <p>K1A</p>
+                <p id="p_K1A" class="klas_naam">K1A</p>
             </div>
-            <div id="K1B" class="klass_icoon">
+            <div id="K1B" class="klas_icoon">
                 <img src="images/kleuter/K1B.png" alt="X">
-                <p>K1B</p>
+                <p id="p_K1B" class="klas_naam">K1B</p>
             </div>
-            <div id="K2A" class="klass_icoon">
+            <div id="K2A" class="klas_icoon">
                 <img src="images/kleuter/K2A.jpg" alt="X">
-                <p>K2A</p>
+                <p id="p_K2A" class="klas_naam">K2A</p>
             </div>
-            <div id="K2B" class="klass_icoon">
+            <div id="K2B" class="klas_icoon">
                 <img src="images/kleuter/K2B.png" alt="X">
-                <p>K2B</p>
+                <p id="p_K2B" class="klas_naam">K2B</p>
             </div>
-            <div id="K3A" class="klass_icoon">
+            <div id="K3A" class="klas_icoon">
                 <img src="images/kleuter/K3A.png" alt="X">
-                <p>K3A</p>
+                <p id="p_K3A" class="klas_naam">K3A</p>
             </div>
-            <div id="K3B" class="klass_icoon">
+            <div id="K3B" class="klas_icoon">
                 <img src="images/kleuter/K3B.JPG" alt="X">
-                <p>K3B</p>
+                <p id="p_K3B" class="klas_naam">K3B</p>
             </div>
-            <div id="SPA" class="klass_icoon">
+            <div id="SPA" class="klas_icoon">
                 <img src="images/kleuter/SPA.jpg" alt="X">
-                <p>SPA</p>
+                <p id="p_SPA" class="klas_naam">SPA</p>
             </div>
-            <div id="SPB" class="klass_icoon">
+            <div id="SPB" class="klas_icoon">
                 <img src="images/kleuter/SPB.png" alt="X">
-                <p>SPB</p>
+                <p id="p_SPB" class="klas_naam">SPB</p>
             </div>
             <!-- lager -->
-            <div id="dir21" class="klass_icoon">
+            <div id="dir21" class="klas_icoon">
                 <img src="images/lager/21 dir.jpg" alt="X">
-                <p>21 dir</p>
+                <p id="p_dir21" class="klas_naam">21 dir</p>
             </div>
-            <div id="L1A" class="klass_icoon">
+            <div id="L1A" class="klas_icoon">
                 <img src="images/lager/L1A.png" alt="X">
-                <p>L1A</p>
+                <p id="p_L1A" class="klas_naam">L1A</p>
             </div>
-            <div id="L1B" class="klass_icoon">
+            <div id="L1B" class="klas_icoon">
                 <img src="images/lager/L1B.png" alt="X">
-                <p>L1B</p>
+                <p id="p_L1B" class="klas_naam">L1B</p>
             </div>
-            <div id="L2A" class="klass_icoon">
+            <div id="L2A" class="klas_icoon">
                 <img src="images/lager/L2A.png" alt="X">
-                <p>L2A</p>
+                <p id="p_L2A" class="klas_naam">L2A</p>
             </div>
-            <div id="L2B" class="klass_icoon">
+            <div id="L2B" class="klas_icoon">
                 <img src="images/lager/L2B.png" alt="X">
-                <p>L2B</p>
+                <p id="p_L2B" class="klas_naam">L2B</p>
             </div>
-            <div id="L3A" class="klass_icoon">
+            <div id="L3A" class="klas_icoon">
                 <img src="images/lager/L3A.png" alt="X">
-                <p>L3A</p>
+                <p id="p_L3A" class="klas_naam">L3A</p>
             </div>
-            <div id="L3B" class="klass_icoon">
+            <div id="L3B" class="klas_icoon">
                 <img src="images/lager/L3B.png" alt="X">
-                <p>L3B</p>
+                <p id="p_L3B" class="klas_naam">L3B</p>
             </div>
-            <div id="L4A" class="klass_icoon">
+            <div id="L4A" class="klas_icoon">
                 <img src="images/lager/L4A.png" alt="X">
-                <p>L4A</p>
+                <p id="p_L4A" class="klas_naam">L4A</p>
             </div>
-            <div id="L4B" class="klass_icoon">
+            <div id="L4B" class="klas_icoon">
                 <img src="images/lager/L4B .jpg" alt="X">
-                <p>L4B</p>
+                <p id="p_L4B" class="klas_naam">L4B</p>
             </div>
-            <div id="L5A" class="klass_icoon">
+            <div id="L5A" class="klas_icoon">
                 <img src="images/lager/L5A.png" alt="X">
-                <p>L5A</p>
+                <p id="p_L5A" class="klas_naam">L5A</p>
             </div>
-            <div id="L5B" class="klass_icoon">
+            <div id="L5B" class="klas_icoon">
                 <img src="images/lager/L5B.png" alt="X">
-                <p>L5B</p>
+                <p id="p_L5B" class="klas_naam">L5B</p>
             </div>
-            <div id="L6" class="klass_icoon">
+            <div id="L6" class="klas_icoon">
                 <img src="images/lager/L6.png" alt="X">
-                <p>L6</p>
+                <p id="p_L6" class="klas_naam">L6</p>
             </div>
-            <div id="LO" class="klass_icoon">
+            <div id="LO" class="klas_icoon">
                 <img src="images/lager/LO.png" alt="X">
-                <p>LO</p>
+                <p id="p_LO" class="klas_naam">LO</p>
             </div>
             
         </div>
