gallerij toegevoegd en nu nog jusite fotos laden

--- a/index.html
+++ b/index.html
@@ -8,96 +8,105 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+         <!-- jQuery -->
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
+         <!-- nanogallery2 -->
+         <link  href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/2.4.2/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
+         <script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery2/2.4.2/jquery.nanogallery2.min.js"></script>
     </head>
     <body>
         <div id="map">
             <!-- kleuters -->
             <div id="K1A" class="klas_icoon">
-                <img src="images/kleuter/K1A.png" alt="X">
+                <img src="images/kleuter/K1A.png" alt="X" onclick="KlikKlas('K1A')">
                 <p id="p_K1A" class="klas_naam">K1A</p>
             </div>
             <div id="K1B" class="klas_icoon">
-                <img src="images/kleuter/K1B.png" alt="X">
+                <img src="images/kleuter/K1B.png" alt="X" onclick="KlikKlas('K1B')">
                 <p id="p_K1B" class="klas_naam">K1B</p>
             </div>
             <div id="K2A" class="klas_icoon">
-                <img src="images/kleuter/K2A.jpg" alt="X">
+                <img src="images/kleuter/K2A.png" alt="X" onclick="KlikKlas('K2A')">
                 <p id="p_K2A" class="klas_naam">K2A</p>
             </div>
             <div id="K2B" class="klas_icoon">
-                <img src="images/kleuter/K2B.png" alt="X">
+                <img src="images/kleuter/K2B.png" alt="X" onclick="KlikKlas('K2B')">
                 <p id="p_K2B" class="klas_naam">K2B</p>
             </div>
             <div id="K3A" class="klas_icoon">
-                <img src="images/kleuter/K3A.png" alt="X">
+                <img src="images/kleuter/K3A.png" alt="X" onclick="KlikKlas('K3A')">
                 <p id="p_K3A" class="klas_naam">K3A</p>
             </div>
             <div id="K3B" class="klas_icoon">
-                <img src="images/kleuter/K3B.JPG" alt="X">
+                <img src="images/kleuter/K3B.png" alt="X" onclick="KlikKlas('K3B')">
                 <p id="p_K3B" class="klas_naam">K3B</p>
             </div>
             <div id="SPA" class="klas_icoon">
-                <img src="images/kleuter/SPA.jpg" alt="X">
+                <img src="images/kleuter/SPA.png" alt="X" onclick="KlikKlas('SPA')">
                 <p id="p_SPA" class="klas_naam">SPA</p>
             </div>
             <div id="SPB" class="klas_icoon">
-                <img src="images/kleuter/SPB.png" alt="X">
+                <img src="images/kleuter/SPB.png" alt="X" onclick="KlikKlas('SPB')">
                 <p id="p_SPB" class="klas_naam">SPB</p>
             </div>
             <!-- lager -->
             <div id="dir21" class="klas_icoon">
-                <img src="images/lager/21 dir.jpg" alt="X">
+                <img src="images/lager/21 dir.png" alt="X" onclick="KlikKlas('dir21')">
                 <p id="p_dir21" class="klas_naam">21 dir</p>
             </div>
             <div id="L1A" class="klas_icoon">
-                <img src="images/lager/L1A.png" alt="X">
+                <img src="images/lager/L1A.png" alt="X" onclick="KlikKlas('L1A')">
                 <p id="p_L1A" class="klas_naam">L1A</p>
             </div>
             <div id="L1B" class="klas_icoon">
-                <img src="images/lager/L1B.png" alt="X">
+                <img src="images/lager/L1B.png" alt="X" onclick="KlikKlas('L1B')">
                 <p id="p_L1B" class="klas_naam">L1B</p>
             </div>
             <div id="L2A" class="klas_icoon">
-                <img src="images/lager/L2A.png" alt="X">
+                <img src="images/lager/L2A.png" alt="X" onclick="KlikKlas('L2A')">
                 <p id="p_L2A" class="klas_naam">L2A</p>
             </div>
             <div id="L2B" class="klas_icoon">
-                <img src="images/lager/L2B.png" alt="X">
+                <img src="images/lager/L2B.png" alt="X" onclick="KlikKlas('L2B')">
                 <p id="p_L2B" class="klas_naam">L2B</p>
             </div>
             <div id="L3A" class="klas_icoon">
-                <img src="images/lager/L3A.png" alt="X">
+                <img src="images/lager/L3A.png" alt="X" onclick="KlikKlas('L3A')">
                 <p id="p_L3A" class="klas_naam">L3A</p>
             </div>
             <div id="L3B" class="klas_icoon">
-                <img src="images/lager/L3B.png" alt="X">
+                <img src="images/lager/L3B.png" alt="X" onclick="KlikKlas('L3B')">
                 <p id="p_L3B" class="klas_naam">L3B</p>
             </div>
             <div id="L4A" class="klas_icoon">
-                <img src="images/lager/L4A.png" alt="X">
+                <img src="images/lager/L4A.png" alt="X" onclick="KlikKlas('L4A')">
                 <p id="p_L4A" class="klas_naam">L4A</p>
             </div>
             <div id="L4B" class="klas_icoon">
-                <img src="images/lager/L4B .jpg" alt="X">
+                <img src="images/lager/L4B.png" alt="X" onclick="KlikKlas('L4B')">
                 <p id="p_L4B" class="klas_naam">L4B</p>
             </div>
             <div id="L5A" class="klas_icoon">
-                <img src="images/lager/L5A.png" alt="X">
+                <img src="images/lager/L5A.png" alt="X" onclick="KlikKlas('L5A')">
                 <p id="p_L5A" class="klas_naam">L5A</p>
             </div>
             <div id="L5B" class="klas_icoon">
-                <img src="images/lager/L5B.png" alt="X">
+                <img src="images/lager/L5B.png" alt="X" onclick="KlikKlas('L5B')">
                 <p id="p_L5B" class="klas_naam">L5B</p>
             </div>
             <div id="L6" class="klas_icoon">
-                <img src="images/lager/L6.png" alt="X">
+                <img src="images/lager/L6.png" alt="X" onclick="KlikKlas('L6')">
                 <p id="p_L6" class="klas_naam">L6</p>
             </div>
             <div id="LO" class="klas_icoon">
-                <img src="images/lager/LO.png" alt="X">
+                <img src="images/lager/LO.png" alt="X" onclick="KlikKlas('LO')">
                 <p id="p_LO" class="klas_naam">LO</p>
             </div>
             
+        </div>
+        <div id="gallerij">
+            <button id="btnSluitGallerij" aria-label="Sluit Gallerij" onclick="SluitGallerij()">×</button>
+            <div id="nanogallery2">gallery_made_with_nanogallery2</div>
         </div>
         
         <script src="main.js" async defer></script>
