gallerij logica steekt er in en geluiden toegevoegd, nu enkel nog selectie an de juiste media

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             
         </div>
         <div id="gallerij">
-            <button id="btnSluitGallerij" aria-label="Sluit Gallerij" onclick="SluitGallerij()">×</button>
-            <div id="nanogallery2">gallery_made_with_nanogallery2</div>
+            <!--<button id="btnSluitGallerij" aria-label="Sluit Gallerij" onclick="SluitGallerij()">×</button>
+            <div id="nanogallery2">gallery_made_with_nanogallery2</div>-->
         </div>
         
         <script src="main.js" async defer></script>
